# litex_reference_designs

./: CMakeLists.txt  README.md  litex_rs_setup.py  litex_setup.py  readme.md  requirements.txt  setup.py
Core_IPs/AXI_GPIO/: __init__.py  core_axi4gpio.py
Core_IPs/AXI_RAM/: __init__.py  core_ram.py
Core_IPs/axi_ram/: __init__.py  core_ram.py
Example_designs/: Makefile
Example_designs/Vexriscv_axi_gpio_led/: gemini.py  litex_sim_rs.py  readme.md
Example_designs/Vexriscv_axi_ram/: gemini.py  readme.md
Example_designs/Vexriscv_helloworld/: litex_sim_rs.py  readme.md
VexRiscv_AXI_RAM/: README.md
VexRiscv_AXI_RAM/bare_metal_stimulus/: Makefile
example_designs/: Makefile  Makefile_usage.md
example_designs/Vexriscv_axi_gpio_led/: readme.md
example_designs/vexriscv_axi_gpio/: README.md  gemini.py  litex_sim_rs.py
example_designs/vexriscv_axi_gpio_led/: README.md  litex_sim_rs.py
example_designs/vexriscv_axi_ram/: README.md  gemini.py  litex_sim_rs.py
example_designs/vexriscv_hello_world/: README.md  gemini.py  litex_sim_rs.py
example_designs/vexriscv_helloworld/: README.md
litex_rs.egg-info/: PKG-INFO  SOURCES.txt
litex_rs/AXI_GPIO/: core_axi4gpio.py
litex_rs/axi_multi_ram/: __init__.py  core_ram.py
litex_rs/axi_ram/: core_ram.py
litex_rs_ips/AXI_GPIO/: __init__.py
litex_rs_ips/axi_multi_ram/: __init__.py
litex_rs_ips/axi_ram/: __init__.py
raptor_example_designs/Vexriscv_axi_gpio_led/: readme.md
raptor_example_designs/Vexriscv_axi_ram/: readme.md
raptor_example_designs/Vexriscv_helloworld/: litex_sim_rs.py  readme.md
(+49 files in other folders)
